--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
-{
+  {
   "dependencies": {
-    "express": "^4",
-    "jade": "^1",
     "body-parser": "^1",
-    "mongoose": "~3.8.24"
+    "express": "^4",
+    "express-session": "^1.10.4",
+    "jade": "^1",
+    "mongoose": "~3.8.24",
+    "passport": "^0.2.1",
+    "passport-facebook": "^2.0.0"
   },
   "name": "theColoradoApp",
   "version": "1.0.0",
   "main": "app.js",
   "devDependencies": {},
   "scripts": {
-  	"start": "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
